--- a/cmake/templates/Android.OgreGLES2.mk.in
+++ b/cmake/templates/Android.OgreGLES2.mk.in
@@ -27,6 +27,7 @@ LOCAL_LDLIBS	+= @ANDROID_NDK@/sources/cxx-stl/gnu-libstdc++/@ANDROID_COMPILER_VE
 LOCAL_STATIC_LIBRARIES := @SAMPLE_LDLIBS@ android_native_app_glue cpufeatures iconv
 LOCAL_CFLAGS := -DGL_GLEXT_PROTOTYPES=1
 LOCAL_CFLAGS += -fexceptions -frtti -x c++ -D___ANDROID___ -DANDROID -DZZIP_OMIT_CONFIG_H -DUSE_RTSHADER_SYSTEM=1
+LOCAL_CFLAGS += -DCEGUI_SAMPLES_ANDROID_OGRE=1
 
 LOCAL_C_INCLUDES := @CMAKE_SOURCE_DIR@/samples/browser/include
 LOCAL_C_INCLUDES += @CMAKE_SOURCE_DIR@/cegui/include
