--- a/samples/common/include/CEGUISamplesConfig.h.in
+++ b/samples/common/include/CEGUISamplesConfig.h.in
@@ -60,6 +60,7 @@ Each item in here has a comment to describe what it's for.
 #cmakedefine CEGUI_SAMPLES_USE_GTK2
 
 #cmakedefine CEGUI_SAMPLES_RENDERER_OPENGL_ACTIVE
+#cmakedefine CEGUI_SAMPLES_RENDERER_OPENGLES2_ACTIVE
 #cmakedefine CEGUI_SAMPLES_RENDERER_OGRE_ACTIVE
 #cmakedefine CEGUI_SAMPLES_RENDERER_IRRLICHT_ACTIVE
 #cmakedefine CEGUI_SAMPLES_RENDERER_DIRECT3D9_ACTIVE
