--- a/cegui/src/RendererModules/OpenGL/CMakeLists.txt
+++ b/cegui/src/RendererModules/OpenGL/CMakeLists.txt
@@ -70,7 +70,12 @@ endif()
 cegui_add_library(${CEGUI_TARGET_NAME} CORE_SOURCE_FILES CORE_HEADER_FILES)
 cegui_add_dependency(${CEGUI_TARGET_NAME} GLM)
 if (CEGUI_BUILD_RENDERER_OPENGLES2)
-    cegui_add_dependency(${CEGUI_TARGET_NAME} OPENGLES3)
+    if (CEGUI_BUILD_RENDERER_OPENGLES2_WITH_GLES3_SUPPORT)
+        add_definitions ( -DCEGUI_GLES3_SUPPORT )
+        cegui_add_dependency(${CEGUI_TARGET_NAME} OPENGLES3)
+    else()
+        cegui_add_dependency(${CEGUI_TARGET_NAME} OPENGLES2)
+    endif()
 else()
     cegui_add_dependency(${CEGUI_TARGET_NAME} OPENGL)
     cegui_add_dependency(${CEGUI_TARGET_NAME} GLEW)
