added better android project name

--- a/samples/browser/CMakeLists.txt
+++ b/samples/browser/CMakeLists.txt
@@ -174,9 +174,9 @@ if(CEGUI_BUILD_STATIC_CONFIGURATION)
         set(OGRE_TEMPLATES_DIR "${CMAKE_SOURCE_DIR}/cmake/templates")
         set(OGRE_DEPENDENCIES_DIR "${CMAKE_INSTALL_PREFIX}") 
         file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/browserdummy.cpp "int x_dummy = 0;")
-        ADD_LIBRARY(SampleBrowserDummy SHARED ${CMAKE_CURRENT_BINARY_DIR}/browserdummy.cpp)
-        target_link_libraries(SampleBrowserDummy ${CEGUI_TARGET_NAME}_Static)
-        SET(ANDROID_PROJECT_TARGET "SampleBrowserDummy")
+        ADD_LIBRARY(CEGUISampleBrowser SHARED ${CMAKE_CURRENT_BINARY_DIR}/browserdummy.cpp)
+        target_link_libraries(CEGUISampleBrowser ${CEGUI_TARGET_NAME}_Static)
+        SET(ANDROID_PROJECT_TARGET "CEGUISampleBrowser")
         create_android_proj(${ANDROID_PROJECT_TARGET})
     endif()
 endif()
