--- a/cmake/templates/Android.OgreGLES2.mk.in
+++ b/cmake/templates/Android.OgreGLES2.mk.in
@@ -10,23 +10,18 @@ LOCAL_SRC_FILES 	:= @ANDROID_NDK@/sources/android/support/src/musl-locale/iconv.
 LOCAL_SRC_FILES 	+= @ANDROID_NDK@/sources/android/support/src/musl-multibyte/wctomb.c
 include $(BUILD_STATIC_LIBRARY)
 
-# Specify prebuilt static libraries
-@HEADERS@
-
 include $(CLEAR_VARS)
 LOCAL_MODULE	:= @ANDROID_MOD_NAME@
 LOCAL_LDLIBS	:= -landroid -lz -lc -lm -ldl -llog -lEGL -lGLESv2
 LOCAL_LDLIBS	+= -L@CMAKE_BINARY_DIR@/lib
-LOCAL_LDLIBS 	+= -L@OGRE_DEPENDENCIES_DIR@/lib
-LOCAL_LDLIBS 	+= -L@OGRE_DEPENDENCIES_DIR@/lib/OGRE
+LOCAL_LDLIBS 	+= -L@CEGUI_DEPENDENCIES_DIR@/lib/@ANDROID_ABI@ -L@CEGUI_DEPENDENCIES_DIR@/lib/
 LOCAL_LDLIBS	+= -lCEGUIOgreRenderer-@CEGUI_VERSION_MAJOR@_Static -lCEGUIBase-@CEGUI_VERSION_MAJOR@_Static -lCEGUICommonDialogs-@CEGUI_VERSION_MAJOR@_Static -lCEGUICoreWindowRendererSet_Static -lCEGUIFreeImageImageCodec_Static -lCEGUITinyXMLParser_Static -lCEGUISampleBrowser-@CEGUI_VERSION_MAJOR@.@CEGUI_VERSION_MINOR@_Static
-LOCAL_LDLIBS	+= -lOgreOverlayStatic -lPlugin_OctreeSceneManagerStatic -lPlugin_ParticleFXStatic -lRenderSystem_GLES2Static -lOgreRTShaderSystemStatic -lOgreMainStatic 
+LOCAL_LDLIBS	+= -lRenderSystem_GLES2Static -lOgreMainStatic 
 LOCAL_LDLIBS	+= -lfreeimage -lfreetype -ltinyxml -lzzip -lOIS -lpcre
 LOCAL_LDLIBS    += @NDKOUT@/obj/local/@ANDROID_ABI@/libcpufeatures.a @NDKOUT@/obj/local/@ANDROID_ABI@/libiconv.a 
 LOCAL_LDLIBS	+= @ANDROID_NDK@/sources/cxx-stl/gnu-libstdc++/@ANDROID_COMPILER_VERSION@/libs/@ANDROID_ABI@/libgnustl_static.a
 LOCAL_STATIC_LIBRARIES := @SAMPLE_LDLIBS@ android_native_app_glue cpufeatures iconv
-LOCAL_CFLAGS := -DGL_GLEXT_PROTOTYPES=1
-LOCAL_CFLAGS += -fexceptions -frtti -x c++ -D___ANDROID___ -DANDROID -DZZIP_OMIT_CONFIG_H -DUSE_RTSHADER_SYSTEM=1
+LOCAL_CFLAGS += -fexceptions -frtti -D___ANDROID___ -DANDROID -DZZIP_OMIT_CONFIG_H 
 LOCAL_CFLAGS += -DCEGUI_SAMPLES_ANDROID_OGRE=1
 
 LOCAL_C_INCLUDES := @CMAKE_SOURCE_DIR@/samples/browser/include
@@ -35,12 +30,12 @@ LOCAL_C_INCLUDES += @CMAKE_SOURCE_DIR@/samples/common/include
 LOCAL_C_INCLUDES += @CMAKE_BINARY_DIR@/samples/browswer/include
 LOCAL_C_INCLUDES += @CMAKE_BINARY_DIR@/cegui/include
 LOCAL_C_INCLUDES += @CMAKE_BINARY_DIR@/samples/common/include
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include 
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include/OIS 
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include/OGRE
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2/include 
-LOCAL_C_INCLUDES += @OGRE_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2/include/EGL
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include 
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include/OIS 
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include/OGRE
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2/include 
+LOCAL_C_INCLUDES += @CEGUI_DEPENDENCIES_DIR@/include/OGRE/RenderSystems/GLES2/include/EGL
 LOCAL_C_INCLUDES += @ANDROID_NDK@/sources/cpufeatures 
 
 LOCAL_PATH := @JNI_PATH@
