able to use cegui_dependencies_dir or cmake_prefix_path

--- a/samples/browser/CMakeLists.txt
+++ b/samples/browser/CMakeLists.txt
@@ -175,6 +175,10 @@ if(CEGUI_BUILD_STATIC_CONFIGURATION)
         SET(ANDROID_PROJECT_TARGET "CEGUISampleBrowserAndroid")
         ADD_LIBRARY(${ANDROID_PROJECT_TARGET} SHARED ${CMAKE_CURRENT_BINARY_DIR}/browserdummy.cpp)
         target_link_libraries(${ANDROID_PROJECT_TARGET} ${CEGUI_TARGET_NAME}_Static)
+        #if cegui dependencies dir not supplied, then look in the provided prefix path
+        if (NOT CEGUI_DEPENDENCIES_DIR) 
+            set(CEGUI_DEPENDENCIES_DIR ${CMAKE_PREFIX_PATH})
+        endif()
         create_android_proj(${ANDROID_PROJECT_TARGET})
     endif()
 endif()
