separating opengl texture classes for GLES/GL/GL3 differences

--- a/cegui/src/RendererModules/OpenGL/CMakeLists.txt
+++ b/cegui/src/RendererModules/OpenGL/CMakeLists.txt
@@ -49,27 +49,38 @@ endif()
 
 if (NOT CEGUI_BUILD_RENDERER_OPENGL3)
     list (REMOVE_ITEM CORE_SOURCE_FILES GL3Renderer.cpp
+                                        GL3Texture.cpp
                                         GL3GeometryBuffer.cpp
                                         GL3FBOTextureTarget.cpp
                                         GL3Shader.cpp
                                         GL3StateChangeWrapper.cpp)
     list (REMOVE_ITEM CORE_HEADER_FILES ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3Renderer.h
+                                        ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3Texture.h
                                         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3GeometryBuffer.h
                                         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3Shader.h
                                         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3StateShaderWrapper.h
                                         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GL3FBOTextureTarget.h)
 endif()
 
+#GL and GL3 both use GLTexture via inheritance
+if (CEGUI_BUILD_RENDERER_OPENGLES2)
+    list (REMOVE_ITEM CORE_SOURCE_FILES GLTexture.cpp)
+    list (REMOVE_ITEM CORE_HEADER_FILES ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLTexture.h)
+endif()
+
 if (NOT CEGUI_BUILD_RENDERER_OPENGLES2)
     list (REMOVE_ITEM CORE_SOURCE_FILES GLES2Renderer.cpp
+                                        GLES2Texture.cpp
                                         GLES2GeometryBuffer.cpp
                                         GLES2FBOTextureTarget.cpp)
     list (REMOVE_ITEM CORE_HEADER_FILES ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLES2Renderer.h
+        ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLES2Texture.h
         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLES2GeometryBuffer.h
         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLES2FBOTextureTarget.h
         ${CMAKE_SOURCE_DIR}/cegui/include/CEGUI/RendererModules/OpenGL/GLES2StateShaderWrapper.h)
 
 endif()
+
 cegui_add_library(${CEGUI_TARGET_NAME} CORE_SOURCE_FILES CORE_HEADER_FILES)
 cegui_add_dependency(${CEGUI_TARGET_NAME} GLM)
 if (CEGUI_BUILD_RENDERER_OPENGLES2)
