--- a/cmake/templates/Android.OgreGLES2.mk.in
+++ b/cmake/templates/Android.OgreGLES2.mk.in
@@ -15,6 +15,7 @@ LOCAL_MODULE	:= @ANDROID_MOD_NAME@
 LOCAL_LDLIBS	:= -landroid -lz -lc -lm -ldl -llog -lEGL -lGLESv2
 LOCAL_LDLIBS	+= -L@CMAKE_BINARY_DIR@/lib
 LOCAL_LDLIBS 	+= -L@CEGUI_DEPENDENCIES_DIR@/lib/@ANDROID_ABI@ -L@CEGUI_DEPENDENCIES_DIR@/lib/
+LOCAL_LDLIBS 	+= -L@CEGUI_DEPENDENCIES_DIR@/lib/@ANDROID_ABI@/OGRE -L@CEGUI_DEPENDENCIES_DIR@/lib/OGRE
 LOCAL_LDLIBS	+= -lCEGUIOgreRenderer-@CEGUI_VERSION_MAJOR@_Static -lCEGUIBase-@CEGUI_VERSION_MAJOR@_Static -lCEGUICommonDialogs-@CEGUI_VERSION_MAJOR@_Static -lCEGUICoreWindowRendererSet_Static -lCEGUIFreeImageImageCodec_Static -lCEGUITinyXMLParser_Static -lCEGUISampleBrowser-@CEGUI_VERSION_MAJOR@.@CEGUI_VERSION_MINOR@_Static
 LOCAL_LDLIBS	+= -lRenderSystem_GLES2Static -lOgreMainStatic 
 LOCAL_LDLIBS	+= -lfreeimage -lfreetype -ltinyxml -lzzip -lOIS -lpcre
