condensed the GLES2 renderer to become GL renderer along with GL, GL3 and now GLES2

--- a/cegui/src/RendererModules/CMakeLists.txt
+++ b/cegui/src/RendererModules/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (CEGUI_BUILD_RENDERER_OPENGL OR CEGUI_BUILD_RENDERER_OPENGL3)
+if (CEGUI_BUILD_RENDERER_OPENGL OR CEGUI_BUILD_RENDERER_OPENGL3 OR CEGUI_BUILD_RENDERER_OPENGLES2)
     add_subdirectory(OpenGL)
 endif()
 
@@ -26,7 +26,4 @@ if (CEGUI_BUILD_RENDERER_OPENGLES)
     add_subdirectory(OpenGLES)
 endif()
 
-if (CEGUI_BUILD_RENDERER_OPENGLES2)
-    add_subdirectory(OpenGL)
-endif()
 
